Blockly: Improve authentication page design

--- a/blockly/app/views/authentication/index.html.erb
+++ b/blockly/app/views/authentication/index.html.erb
@@ -1,16 +1,18 @@
 <%= form_with url: sign_in_path, local: true do |form| %>
-  I'm
-  <span class="name-field">
-    <%= form.text_field :login_id,
-                        value: params[:name],
-                        class: 'name',
-                        id: 'name',
-                        placeholder: 'your name' %>&nbsp;!
-    <span class="hint">
-      English-only
+  <div class="form-wrap">
+    I'm
+    <span class="name-field">
+      <%= form.text_field :login_id,
+                          value: params[:name],
+                          class: 'name',
+                          id: 'name',
+                          placeholder: 'your name' %>&nbsp;!
+      <span class="hint">
+        English-only
+      </span>
     </span>
-  </span>
-  <div class="btn-wrap">
-    <%= form.button "Let's Start Coding" %>
+    <div class="btn-wrap">
+      <%= form.button "Let's Start Coding" %>
+    </div>
   </div>
 <% end %>
