--- a/blockly/app/assets/stylesheets/authentication.scss.erb
+++ b/blockly/app/assets/stylesheets/authentication.scss.erb
@@ -3,6 +3,7 @@
   &.index {
     background-image: url(<%= asset_url 'blur-background.png' %>);
     background-size: cover;
+    background-position: center top;
 
     form {
       position: absolute;
@@ -16,6 +17,14 @@
       text-align: center;
       font-weight: bold;
 
+      .form-wrap {
+        margin: 0 auto;
+        max-width: 600px;
+        background-color: rgba(255,255,255, 0.6);
+        padding: 30px 0;
+        border-radius: 40px;
+        box-shadow: 0 0 black;
+      }
       .name-field {
         position: relative;
         display: inline-block;
@@ -24,9 +33,10 @@
           width: 384px;
           padding: 20px;
           text-align: center;
-          background-color: rgba(255, 255, 255, 0.5);
+          background-color: rgba(255, 255, 255, 0.8);
           border: 1px solid #ccc;
           ime-mode: disabled;
+          box-shadow: 0px 0px 10px #666 inset;
         }
 
         .hint {
