Blockly: Fix restoring bug on firefox

--- a/blockly/app/views/blocklies/workspaces/_index.html.erb
+++ b/blockly/app/views/blocklies/workspaces/_index.html.erb
@@ -103,11 +103,10 @@
     </div>
     <div class="col-sm-2 restore">
       <%= link_to "Restore",
-                  "javascript:
-                    Code.workspace.clear();
-                    Blockly.Xml.domToWorkspace(Blockly.Xml.textToDom(
-                      '#{ workspace.xml }'),Code.workspace
-                    );" %>
+                  edit_workspace_path(workspace.id),
+                  method: :get,
+                  id: "restore",
+                  remote: true %>
     </div>
   </div>
 <% end %>
