Blockly: Replacce restore button to summon button

--- a/blockly/app/views/blocklies/workspaces/_index.html.erb
+++ b/blockly/app/views/blocklies/workspaces/_index.html.erb
@@ -102,7 +102,7 @@
       <% end %>
     </div>
     <div class="col-sm-2 restore">
-      <%= link_to "Restore",
+      <%= link_to "Summon",
                   edit_workspace_path(workspace.id),
                   method: :get,
                   id: "restore",
