--- a/blockly/app/views/blocklies/workspaces/edit.js.erb
+++ b/blockly/app/views/blocklies/workspaces/edit.js.erb
@@ -1,9 +1,7 @@
 $("#workspace_form")
   .html('<%= j( render "form", workspace: @workspace ) %>');
 
-Code.workspace.clear()
-
-Blockly.Xml.domToWorkspace(
+Blockly.Xml.appendDomToWorkspace(
   Blockly.Xml.textToDom('<%= @workspace.xml.html_safe %>'),
   Code.workspace
 );
