Blockly: Change app name and version to be managed in settings.yml

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -23,7 +23,10 @@
 <table width="100%" height="100%">
   <tr class="header" id="header">
     <td>
-      <h1>Blockly ModelTown</h1>
+      <div>
+        <h1 class="app-name"><%= Settings.app_name %></h1>
+        <span class="version">v<%= Settings.version %></span>
+      </div>
     </td>
     <td class="farSide">
       <!-- <button type="button"
